Refactor - prepare project for java version 8